use hvac mode to turn off ac

--- a/packages/work_time_off.yaml
+++ b/packages/work_time_off.yaml
@@ -27,7 +27,7 @@ automation:
             # climate.turn_off doesn't seem to work, so using hvac_mode
             - service: climate.set_hvac_mode
               data:
-                hvac_mode: off
+                hvac_mode: "off"
               target:
                 entity_id: climate.midea_ac_32985348871179
             - delay: '00:02:00' # Wait
